# cxxproj2model

./: CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json
asset/: 5815163906600373956.json
cmake/: addCatch2.cmake  addClangLLVM.cmake  addDoxygen.cmake  addSpdlog.cmake
conf/: proj2model-conf.json.in
docs/: Doxyfile.in  README.md
include/: version.h  version.h.in
include/Beacon/: BeaconASTConsumer.h  BeaconFrontendAction.h
include/Beacon/Backend/: Storage.h
include/Beacon/Generator/: ClassGenerator.h  IncludeDependenceGraphGenerator.h
include/Beacon/Model/: TranslationUnitModel.h
include/Beacon/Tracker/: BeaconPPCallbackTracker.h  ClassMatchCallback.h  FuncCallFuncExprCallback.h  MatchCallbackBase.h
include/Comm/: log.h
include/Comm/Util/: util.h
include/comm/: json.hpp  log.h
include/comm/util/: str-util.h  util.h
include/proj2model/: Config.h
scripts/: gen-class.js  gen-graph.js  gen-include-graph.js
src/: CMakeLists.txt
src/Beacon/: BeaconASTConsumer.cpp  BeaconFrontendAction.cpp  CMakeLists.txt
src/Beacon/Generator/: CMakeLists.txt  ClassGenerator.cpp
src/Beacon/Model/: CMakeLists.txt  TU.proto  TranslationUnitModel.cpp
src/Beacon/Model/proto/: CMakeLists.txt  TU.proto
src/Beacon/Tracker/: BeaconPPCallbackTracker.cpp  CMakeLists.txt  ClassMatchCallback.cpp  FuncCallFuncExprCallback.cpp
src/Comm/: CMakeLists.txt  log.cpp
src/Comm/Util/: str-util.cpp
src/comm/: CMakeLists.txt  log.cpp
src/comm/util/: CMakeLists.txt  str-util.cpp
src/proj2model/: CMakeLists.txt  Config.cpp
standalone/: CMakeLists.txt  main.cpp
