INCLUDE(FindProtobuf)
find_package(Protobuf REQUIRED)
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER TU.proto)
message(STATUS "${PROTO_HEADER}")
add_library(TUModel ${PROTO_HEADER} ${PROTO_SRC})
target_include_directories(TUModel PUBLIC ${Protobuf_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
message(STATUS "TUModel ${CMAKE_CURRENT_BINARY_DIR}")
target_link_libraries(TUModel ${PROTOBUF_LIBRARY})
target_link_libraries(Beacon PUBLIC TUModel)